feat: added GET /api/v1/healthcheck endpoint also fixed models
