# openapi/control/openapi.yaml
@@ -14,9 +14,9 @@ tags:
   - name: PTY Token
     description: Get tokens for starting and joining PTY sessions
   - name: Make Change
-    description: Retrieve Change Requests, their hosts and associated PTY sessions for user's implementor group
+    description: Retrieve Change Requests, their hosts and associated PTY sessions (for user's implementor group, currently not filtered)
   - name: Healthcheck
-    description: Retrieve healthcheck servers and associated PTY sessions for OU Group
+    description: Retrieve healthcheck servers and associated PTY sessions (for user's OU Group, currently not filtered)
   - name: Whitelist / Blacklist
     description: Manage whitelists and blacklists for Healthcheck OU Group
   - name: Audit
@@ -174,6 +174,81 @@ paths:
             description: Not found
           '500':
             description: Internal server error
+
+  ######################################################################## Healthcheck Use Case
+
+  /api/v1/healthcheck/:
+    get:
+      tags:
+        - Healthcheck
+      summary: Get healthcheck servers for user's OU group and associated PTY sessions
+      description: Returns healthcheck servers associated with the user's OU group and their associated
+        PTY sessions and connections
+        OU group is retrieved from the user's id provided by the authentication token.
+      security:
+        - BearerAuth: [ ]
+      parameters:
+        - name: hostname
+          in: query
+          required: false
+          schema: { type: string }
+        - name: ip
+          in: query
+          required: false
+          schema: { type: string }
+        - name: appcode
+          in: query
+          required: false
+          schema: { type: string }
+        - name: lob
+          in: query
+          required: false
+          schema: { type: string }
+        - name: os_type
+          in: query
+          required: false
+          schema: { type: string }
+        - name: status
+          in: query
+          required: false
+          schema: { type: string }
+        - name: environment
+          in: query
+          required: false
+          schema: { type: string }
+        - name: country
+          in: query
+          required: false
+          schema: { type: string }
+        - name: system_type
+          in: query
+          required: false
+          schema: { type: string }
+        - name: pty_session_state
+          in: query
+          required: false
+          description: Does not filter out hosts, field not meant for users
+          schema:
+            $ref: '#/components/schemas/PtySessionState'
+        - name: page
+          in: query
+          schema: { type: integer, minimum: 1, default: 1 }
+        - name: page_size
+          in: query
+          schema: { type: integer, minimum: 1, maximum: 100, default: 20 }
+      responses:
+        '200':
+          description: List healthcheck host details and their associated PTY sessions
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/HealthcheckSessionsResponse'
+        '404':
+          description: Not found
+        '500':
+          description: Internal server error
 
 ######################################################################### Whitelist / Blacklist Use Case
   /api/v1/whitelist/regex:
@@ -517,6 +592,8 @@ components:
           type: string
         app_code:
           type: string
+        country:
+            type: string
 
     OsUsers:
       type: array
@@ -720,6 +797,7 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/HostSessionDetails'
+
     ######################################################################## Whitelist / blacklist use case
 
     RegexFilter:
